--- a/index.html
+++ b/index.html
@@ -132,19 +132,21 @@
     <a href="#" class="logo"><svg width="32" height="32"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
     <ul class="mainMenu margin-top-3">
       <li><a href="#">Home</a></li>
-      <li><a href="#">SAP</a></li>
-      <li><a href="#">Flipboard</a></li>
+      <li><a href="#sap">SAP</a></li>
+      <li><a href="#dabra">Dabra</a></li>
+      <li><a href="#ruum">Ruum</a></li>
+      <li><a href="#atlas">Atlas</a></li>
+
+      <!-- <ul class="subMenu small cropBottom padding-left-2 opacity-8">
+        <li><a href="#dabra">Dabra</a></li>
+        <li><a href="#ruum">Ruum</a></li>
+        <li><a href="#atlas">Atlas</a></li>
+      </ul> -->
+
+      <li><a href="#flipboard">Flipboard</a></li>
       <li><a href="#">Peapod</a></li>
       <li><a href="#">Motorola</a></li>
     </ul>
-    <!-- <ul class="subMenu small opacity-8">
-      <li><a href="#">Product Design</a></li>
-      <li><a href="#">Brand Design</a></li>
-      <li><a href="#">License</a></li>
-      <li><a href="#">Terms & Conditions</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul> -->
     <ul class="social opacity-8">
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
@@ -249,7 +251,7 @@
 
 </section>
 
-<!-- White Slide 2 (#75) -->
+<!-- SAP -->
 <section class="slide whiteSlide" data-name="sap">
   <div class="content">
     <div class="container">
@@ -289,35 +291,35 @@
                   <img src="assets/img/io-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="0" alt="SAP.iO"/>
                 </div>
               </a>
-              <a href="https://www.ruumapp.com" class="box-74" style="background:#01CEAC;">
+              <a href="#ruum" class="box-74" style="background:#1C90FF;">
                 <div class="thumbnail-74">
                   <img src="assets/img/ruum-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="1" alt="Ruum"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-4">
-              <a href="https://www.getspotlight.io" class="box-74" style="background:#1C90FF">
+              <a href="#dabra" class="box-74" style="background:#01CEAC">
                 <div class="thumbnail-74">
-                  <img src="assets/img/spotlight-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="2" alt="Spotlight"/>
+                  <img src="assets/img/dabra-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="2" alt="Dabra"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-5">
-              <a href="https://www.atlasapp.io" class="box-74" style="background:#5D36FF">
+              <a href="#atlas" class="box-74" style="background:#5D36FF">
                 <div class="thumbnail-74">
                   <img src="assets/img/atlas-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="3" alt="Atlas"/>
                 </div>
               </a>
-              <a href="https://www.brillianthire.io" class="box-74" style="background:#ffb300">
+              <a href="#brilliant" class="box-74" style="background:#ffb300">
                 <div class="thumbnail-74">
                   <img src="assets/img/brilliant-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="4" alt="Brilliant"/>
                 </div>
               </a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter ae-6">
-              <a href="https://www.sap.com/corporate/en/company/innovation.html" class="box-74" style="background:#F31CEC">
+              <a href="#spotlight" class="box-74" style="background:#002A86">
                 <div class="thumbnail-74">
-                  <img src="assets/img/nvt-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="5" alt="NVT"/>
+                  <img src="assets/img/spotlight-logo@2x.png" class="wide" data-slider-id="75" data-slider-action="5" alt="Spotlight"/>
                 </div>
               </a>
             </li>
@@ -331,7 +333,7 @@
 </section>
 
 <!-- Popup Gallery -->
-<div class="popup animated" data-popup-id="75">
+<!-- <div class="popup animated" data-popup-id="75">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
     <div class="container">
@@ -361,40 +363,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<!-- White Slide #34 -->
-<section class="slide whiteSlide" data-name="dabra">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
-
-        <div class="fix-12-12">
-          <ul class="flex verticalCenter reverse">
-            <li class="col-6-12 left middle">
-              <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
-                <h1 class="xl bolder cropBottom ae-1 fromBottom">Dabra</h1>
-                <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4">SAP.iO Venture · <a href="https://www.dabra.ai">www.dabra.ai</a></span></p>
-                <p class="ae-3 fromBottom large">Dabra helps you have productive, focused 1:1 meetings, and build trust with the people you work with.  Dabra is built with Vue.js and designed for mobile and desktop use when it comes to preparing, facilitating, and synthesizing meetings.  I created the initial concepts for the application and worked with developers in Tel Aviv to release their beta.</p>
-                <p class="ae-4 fromBottom large margin-bottom-4">Once Dabra was up and running, I hired incredible designers in Javier Yep and Daniel Jacoby to bring Dabra to the next level.  My favorite aspect about Dabra is the ability to view the notes history of my conversations - it's particularly helpful when having performance discussions.</p>
-                <a class="button black rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
-              </div>
-            </li>
-            <li class="col-6-12">
-              <img class="ae-9 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="320" styles="margin:-40% 0" src="assets/img/dabra-mobile@2x.png" alt="Dabra Concept Designs" data-action="zoom"/>
-              <img class="ae-9 margin-bottom-tablet-4 switchNight hideForDesktop hideForTablet hideForPhablet hideForPhone toCenter" width="320" styles="margin:-40% 0" src="assets/img/dabra-mobile-dark@2x.png" alt="Dabra Concept Designs" data-action="zoom"/>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-</section>
-
-<!-- White Slide #34 -->
+<!-- Ruum -->
 <section class="slide whiteSlide" data-name="ruum">
   <div class="content">
     <div class="container">
@@ -404,11 +375,11 @@
           <ul class="flex verticalCenter reverse">
             <li class="col-6-12 left middle">
               <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
-                <h1 class="xl bolder cropBottom ae-1 fromBottom">Ruum</h1>
-                <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4">SAP.iO Venture · <a href="https://www.dabra.ai">www.ruumapp.com</a></span></p>
+                <h1 class="xl bolder margin-bottom-2 ae-1 fromBottom newBlueText">Ruum</h1>
+                <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.ruumapp.com">ruumapp.com</a></span></p> -->
                 <p class="ae-3 fromBottom large">Ruum helps you collaboratively plan, organize and execute your work efficiently.  Ruum is built with Angular and designed for mobile and primarily desktop use when it comes to building flexible project templates, assigning and managing tasks and timelines, as well as modeling new business processes.  I created the initial concepts and worked with developers in Berlin to release their beta.</p>
                 <p class="ae-4 fromBottom large margin-bottom-4">Once Ruum was off to the races, I helped hire incredible designers in Matthias Stegmueller, Iulia Shkatova, and Sarah Mautsch.  My favorite aspect about Ruum is it's clean and simple interface to collaborate with team members in real time on all kinds of different types of projects.</p>
-                <a class="button black rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button newBlue rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
                 <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
@@ -425,7 +396,38 @@
 
 </section>
 
-<!-- White Slide #34 -->
+<!-- Dabra -->
+<section class="slide whiteSlide" data-name="dabra">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter reverse">
+            <li class="col-6-12 left middle">
+              <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
+                <h1 class="xl bolder margin-bottom-2  ae-1 fromBottom newTealText">Dabra</h1>
+                <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.dabra.ai">dabra.ai</a></span></p> -->
+                <p class="ae-3 fromBottom large">Dabra helps you have productive, focused 1:1 meetings, and build trust with the people you work with.  Dabra is built with Vue.js and designed for mobile and desktop use when it comes to preparing, facilitating, and synthesizing meetings.  I created the initial concepts for the application and worked with developers in Tel Aviv to release their beta.</p>
+                <p class="ae-4 fromBottom large margin-bottom-4">Once Dabra was up and running, I hired incredible designers in Javier Yep and Daniel Jacoby to bring Dabra to the next level.  My favorite aspect about Dabra is the ability to view the notes history of my conversations - it's particularly helpful when having performance discussions.</p>
+                <a class="button newTeal rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
+              </div>
+            </li>
+            <li class="col-6-12">
+              <img class="ae-9 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="320" styles="margin:-40% 0" src="assets/img/dabra-mobile@2x.png" alt="Dabra Concept Designs" data-action="zoom"/>
+              <img class="ae-9 margin-bottom-tablet-4 switchNight hideForDesktop hideForTablet hideForPhablet hideForPhone toCenter" width="320" styles="margin:-40% 0" src="assets/img/dabra-mobile-dark@2x.png" alt="Dabra Concept Designs" data-action="zoom"/>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- Atlas -->
 <section class="slide whiteSlide" data-name="atlas">
   <div class="content">
     <div class="container">
@@ -435,11 +437,11 @@
           <ul class="flex verticalCenter reverse">
             <li class="col-6-12 left middle">
               <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
-                <h1 class="xl bolder cropBottom ae-1 fromBottom">Atlas</h1>
-                <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4">SAP.iO Venture · <a href="https://atlasapp.io/">www.atlasapp.io</a></span></p>
+                <h1 class="xl bolder margin-bottom-2 ae-1 fromBottom newIndigoText">Atlas</h1>
+                <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://atlasapp.io/">atlasapp.io</a></span></p> -->
                 <p class="ae-3 fromBottom large">Atlas was a geospatial analytics platform built to make data-driven decisions easy for everyone.  Atlas was built with Vue.js and most interactions were tied tightly to Mapbox when it came to manipulating the map and viewing a variety of data visualization types in 2D and 3D.  I created the initial concepts and worked with the developers in San Francisco to release their beta.</p>
                 <p class="ae-4 fromBottom large margin-bottom-4">Once Atlas was available for productive use, I hired Lucia Melgarejo and David Shen to explore how we can visualize geospatial data over time across multiple layers.  Unfortunately after a couple years, it was clear we wouldn't find a product market fit, so we decided to go through the painful process of sunsetting the venture.</p>
-                <a class="button black rounded ae-5 fromBottom cropLeft wideForPhone">Learn More</a>
+                <a class="button newIndigo rounded ae-5 fromBottom cropLeft wideForPhone">Learn More</a>
                 <!-- <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a> -->
               </div>
             </li>
@@ -454,6 +456,64 @@
     </div>
   </div>
 
+</section>
+
+<!-- White Slide #32 -->
+<section class="slide fromLeft whiteSlide" data-name="spotlight">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex reverse">
+            <li class="col-6-12 left cell-32 padding-right-4">
+              <h1 class="xl bolder newGreyText margin-bottom-2 ae-1 fromBottom">Spotlight</h1>
+              <p class="ae-2 fromBottom large">Ruum helps you collaboratively plan, organize and execute your work efficiently.  Ruum is built with Angular and designed for mobile and primarily desktop use when it comes to building flexible project templates, assigning and managing tasks and timelines, as well as modeling new business processes.  I created the initial concepts and worked with developers in Berlin to release their beta.</p>
+              <p class="ae-3 fromBottom large margin-bottom-4">Once Ruum was off to the races, I helped hire incredible designers in Matthias Stegmueller, Iulia Shkatova, and Sarah Mautsch.  My favorite aspect about Ruum is it's clean and simple interface to collaborate with team members in real time on all kinds of different types of projects.</p>
+              <a class="button newGrey rounded ae-4 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+              <a class="button white rounded ae-5 fromBottom wideForPhone">Learn More</a>
+            </li>
+            <li class="col-6-12 left ae-1 fromBottom">
+              <img class="ipad-32 ae-9 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="1080" styles="margin:-40% 0" src="assets/img/spotlight@2x.png" alt="Spotlight Concept Designs" data-action="zoom"/>
+              <img class="ipad-32 ae-9 margin-bottom-tablet-4 switchNight hideForDesktop hideForTablet hideForPhablet hideForPhone toCenter" width="1080" styles="margin:-40% 0" src="assets/img/spotlight-dark@2x.png" alt="Spotlight Concept Designs" data-action="zoom"/>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- Flipboard -->
+<section class="slide kenBurns" data-name="flipboard">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter reverse">
+            <li class="col-6-12 left middle">
+              <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
+                <h1 class="xl bolder margin-bottom-2 ae-1 fromBottom">Flipboard</h1>
+                <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.flipboard.com/">flipboard.com</a></span></p> -->
+                <p class="ae-3 fromBottom large">I came to Flipboard to learn everything there was about product design for mobile apps at scale.  I learned that the prototype is king and that a good designer iterates through as many completely different concepts as possible in order to arrive at something special.  I also learned my job as a designer is to essentially rip out anything superfluous in the interface until the experience breaks.</p>
+                <p class="ae-4 fromBottom large margin-bottom-4">I worked on a variety of features across mobile, tablet, and web in a variety of areas including user on-boarding, curation, community, and growth.</p>
+                <a class="button black rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
+              </div>
+            </li>
+            <!-- <li class="col-6-12">
+              <img class="ae-4 margin-bottom-tablet-4" width="580" styles="margin:-28% 0" src="assets/img/iphones-34.png" alt="iPhones Thumbnail" data-action="zoom"/>
+            </li> -->
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="background" style="background-image:url(assets/img/flipboard.jpg)"></div>
 </section>
 
 <!-- Panel Bottom #09 -->
