Remove side pole for mobile

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div class="progress-bar-container"><div class="progress-bar-wrap"><div class="progress-bar white"></div></div></div>
 
 <!-- Navigation -->
-<nav class="side pole">
+<nav class="side pole hideForPhone">
   <div class="navigation">
     <ul></ul>
   </div>
