Add Flipboard, Peapod, Motorola

--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
                 <p class="ae-4 fromBottom large">Ruum is built with Angular and designed for mobile and primarily desktop use when it comes to building flexible project templates, assigning and managing tasks and timelines, as well as modeling new business processes.  I created the initial concepts and worked with developers in Berlin to release their beta.</p>
                 <p class="ae-5 fromBottom large margin-bottom-4">Once Ruum was off to the races, I helped hire incredible designers in Matthias Stegmueller, Iulia Shkatova, and Sarah Mautsch.  My favorite aspect about Ruum is it's clean and simple interface to collaborate with team members in real time on all kinds of different types of projects.</p>
                 <a class="button newBlue rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white rounded ae-7 fromBottom wideForPhone">Learn More</a>
+                <a class="button white rounded ae-7 fromBottom wideForPhone newBlueText" href="https://www.ruumapp.com/careers">We're Hiring!</a>
+                <a class="button white rounded ae-8 fromBottom wideForPhone newBlueText">Learn More</a>
               </div>
             </li>
             <li class="col-6-12">
@@ -413,7 +414,7 @@
                 <p class="ae-4 fromBottom large">Dabra is built with Vue.js and designed for mobile and desktop use when it comes to preparing, facilitating, and synthesizing meetings.  I created the initial concepts for the application and worked with developers in Tel Aviv to release their beta.</p>
                 <p class="ae-5 fromBottom large margin-bottom-4">Once Dabra was up and running, I hired incredible designers in Javier Yep and Daniel Jacoby to bring Dabra to the next level.  My favorite aspect about Dabra is the ability to view the notes history of my conversations - it's particularly helpful when having performance discussions.</p>
                 <a class="button newTeal rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-                <a class="button white rounded ae-7 fromBottom wideForPhone">Learn More</a>
+                <a class="button white newTealText rounded ae-7 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
             <li class="col-6-12">
@@ -501,7 +502,7 @@
               <p class="ae-4 fromBottom large">Spotlight is built with Vue.js and designed for primarily desktop use when it comes to monitoring business process, comparing metrics to industry standards, and tracking operational improvements over time.  I created the initial concepts and worked with developers in Berlin to release their alpha.</p>
               <p class="ae-5 fromBottom large margin-bottom-4">Once Spotlight was released as a pilot to early customers, I transitioned the work to David Shen and Laura Ileana Ramirez Rivera.  My favorite aspect about Spotlight is it's ability to analyze all processes in a single view, allowing COOs to make data-driven decisions on "what to fix first."</p>
               <a class="button newGrey rounded ae-6 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
-              <a class="button white rounded ae-7 fromBottom wideForPhone">Learn More</a>
+              <a class="button white newGreyText rounded ae-7 fromBottom wideForPhone">Learn More</a>
             </li>
             <li class="col-6-12 left ae-1 fromBottom">
               <img class="ipad-32 ae-1 margin-bottom-tablet-4 switchDay showForDesktop showForTablet showForPhablet showForPhone toCenter" width="1080" styles="margin:-40% 0" src="assets/img/spotlight@2x.png" alt="Spotlight Concept Designs" data-action="zoom"/>
@@ -517,7 +518,7 @@
 </section>
 
 <!-- Flipboard -->
-<section class="slide kenBurns fade-2" data-name="flipboard">
+<section class="slide kenBurns black fade-3" data-name="flipboard">
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -526,11 +527,10 @@
           <ul class="flex verticalCenter reverse">
             <li class="col-6-12 left middle">
               <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
-                <h1 class="xl margin-bottom-2 ae-1 fromBottom">Flipboard</h1>
-                <!-- <p class="largest weight-5 ae-2 fromBottom"><span class="opacity-4"><a href="https://www.flipboard.com/">flipboard.com</a></span></p> -->
+                <h1 class="xl margin-bottom-2 ae-1 newWhiteText fromBottom">Flipboard</h1>
                 <p class="ae-3 fromBottom large">I came to Flipboard to learn everything there was about product design for mobile apps at scale.  I learned that the prototype is king and that a good designer iterates through as many completely different concepts as possible in order to arrive at something special.  I also learned my job as a designer is to essentially rip out anything superfluous in the interface until the experience breaks.</p>
                 <p class="ae-4 fromBottom large margin-bottom-4">I worked on a variety of features across mobile, tablet, and web in a few key areas including user on-boarding, curation, community, and growth.  I joined at about 80 people and witnessed explosive growth in both our monthly active users as well as employees - both doubling during the time I was there.</p>
-                <a class="button black rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
+                <a class="button newRed rounded ae-5 fromBottom cropLeft wideForPhone">Sign Up For Free</a>
                 <a class="button white rounded ae-6 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
@@ -543,7 +543,85 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/flipboard.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/flipboard-mix.jpg)"></div>
+</section>
+
+<!-- Peapod -->
+<section class="slide whiteSlide video pauseOffScreen" data-name="peapod">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter reverse">
+            <li class="col-5-12 left middle">
+              <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
+                <h1 class="xl margin-bottom-2 ae-2 fromBottom newGreenText">Peapod</h1>
+                <p class="ae-3 fromBottom largest newGreenText padding-right-4"><span class="bold">Grocery shop from anywhere. Delivery on your schedule.</span></p>                <p class="ae-5 fromBottom large margin-bottom-4">I began my career at Peapod as a business analyst working on web applications for their loyalty program.  After managing the release of multiple hybrid mobile apps, I took the lead product management role for the core eCommerce platform and also served as the sole product designer.  With the support and mentorship from the CEO and CTO, I moved to the Bay Area to pursue my freshly formed passion in product design.</p>
+                <a class="button newGreen rounded ae-6 fromBottom cropLeft wideForPhone">Start Shopping</a>
+                <a class="button white newGreenText rounded ae-8 fromBottom wideForPhone">Learn More</a>
+              </div>
+            </li>
+            <li class="col-1-12"></li>
+            <li class="col-6-12">
+              <div class="videoThumbnail rounded shadow popupTrigger ae-1 fromBottom margin-bottom-tablet-4" data-popup-id="16">
+                <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" autoplay="" loop="" muted="" webkit-playsinline="">
+                  <source src="assets/video/peapod.mp4" type="video/mp4">
+                  <source src="assets/video/peapod.webm" type="video/webm">
+                </video>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- Popup Video -->
+<div class="popup autoplay" data-popup-id="16">
+  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+        <div class="fix-10-12">
+          <video class="popupContent shadow rounded" poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" autoplay="" loop="" muted="" webkit-playsinline="">
+            <source src="assets/video/peapod.mp4" type="video/mp4">
+            <source src="assets/video/peapod.webm" type="video/webm">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Motorola -->
+<section class="slide whiteSlide" data-name="motorola">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex fixedSpaces verticalCenter">
+            <li class="col-5-12 left ae-1">
+              <img class="macbook-61 margin-bottom-tablet-3" src="assets/img/s305.png" data-action="zoom" width="1000" alt="Motorola s305 Headset"/>
+            </li>
+            <li class="col-1-12"></li>
+            <li class="col-6-12 left">
+              <h1 class="xl margin-bottom-2 ae-2 fromBottom">Motorola</h1>
+              <p class="ae-3 fromBottom largest padding-right-4"><span class="bold">s305 wins LAPTOP’s Best of CTIA Wireless 2009 Award for Accessories</span></p>
+              <p class="ae-5 fromBottom large margin-bottom-4">My first job out of school was a dream job - I got to play around with the latest Bluetooth hardware technologies while learning about developing business cases for a variety of products, including wireless speakers and headphones.  I was also lucky enough to travel to Shenzhen to manage the production of my first product, the S305.</p>
+              <a class="button white rounded ae-6 fromBottom cropLeft wideForPhone" href="https://www.amazon.com/Motorola-S305-Bluetooth-Stereo-Headphones/dp/B002IS1O84?ref_=fsclp_pl_dp_2">Buy One</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </section>
 
 <!-- Panel Bottom #09 -->
@@ -885,6 +963,53 @@ $(function(){
     $('.whiteSlideSwitch').click();
   }
 });
+</script>
+
+<!-- Autoplay Video -->
+<script>
+  $(function(){
+
+    if (window.isScroll) {
+      $('html,body').on('mousewheel', function(){
+        checkBGVideo();
+      });
+    } else {
+      $(window).on('slideChange',function(event, number, element){
+        //stop all videos
+        $('video').each(function(){ $(this)[0].pause();});
+
+        //start selected
+        if ($(element).hasClass('video')){
+          var $el = $(element).find('video').eq(0);
+          $el[0].play();
+        }
+      });
+    }
+
+    //toggle play/pause video
+    function checkBGVideo(){
+      $('.slide.video').each(function(){
+        var $el = $(this).find('video').eq(0);
+
+        if (isElementInView($(this))) {
+          $el[0].play();
+        } else {
+          $el[0].pause();
+        }
+      });
+    }
+
+    //is element in view?
+    function isElementInView(element) {
+      var scrollTop = $(window).scrollTop(),
+          $element = $(element),
+          pageBottom = scrollTop + $(window).height(),
+          elementTop = $element.offset().top,
+          elementBottom = elementTop + $element.height();
+
+      return (scrollTop > elementTop - $(window).height()) && (scrollTop < elementTop + $element.height());
+    }
+  });
 </script>
 
 </body>
