Fix Peapod video

--- a/index.html
+++ b/index.html
@@ -534,14 +534,20 @@
             <li class="col-5-12 left middle">
               <div class="fix-6-12 toLeft margin-left-tablet-auto margin-right-tablet-auto">
                 <h1 class="xl margin-bottom-2 ae-2 fromBottom newGreenText">Peapod</h1>
-                <p class="ae-3 fromBottom largest newGreenText padding-right-4"><span class="bold">Grocery shop from anywhere. Delivery on your schedule.</span></p>                <p class="ae-5 fromBottom large margin-bottom-4">I began my career at Peapod as a business analyst working on web applications for their loyalty program.  After managing the release of multiple hybrid mobile apps, I took the lead product management role for the core eCommerce platform and also served as the sole product designer.  With the support and mentorship from the CEO and CTO, I moved to the Bay Area to pursue my freshly formed passion in product design.</p>
+                <!-- <p class="ae-3 fromBottom largest newGreenText padding-right-4"><span class="bold">Grocery shop from anywhere. Delivery on your schedule.</span></p>                 -->
+                <p class="ae-5 fromBottom large margin-bottom-4">I began my career at Peapod as a business analyst working on web applications for their loyalty program.  After managing the release of multiple hybrid mobile apps, I took the lead product management role for the core eCommerce platform and also served as the sole product designer.  With the support and mentorship from the CEO and CTO, I moved to the Bay Area to pursue my freshly formed passion in product design.</p>
                 <a class="button newGreen rounded ae-6 fromBottom cropLeft wideForPhone">Start Shopping</a>
                 <a class="button white newGreenText rounded ae-8 fromBottom wideForPhone">Learn More</a>
               </div>
             </li>
             <li class="col-1-12"></li>
             <li class="col-6-12">
-              <div class="videoThumbnail rounded shadow popupTrigger ae-1 fromBottom margin-bottom-tablet-4" data-popup-id="16">
+              <!-- <div class="videoThumbnail rounded shadow popupTrigger ae-1 fromBottom margin-bottom-tablet-4" data-popup-id="16">
+                <video poster="assets/img/peapod@2x.jpg" autoplay="" loop="" muted="" webkit-playsinline="">
+                  <source src="assets/video/peapod.mp4" type="video/mp4">
+                </video>
+              </div> -->
+              <div class="embedVideo rounded size-4x3 ae-1 margin-bottom-phone-4 margin-bottom-phablet-4 margin-bottom-tablet-4 middle">
                 <video poster="assets/img/peapod@2x.jpg" autoplay="" loop="" muted="" webkit-playsinline="">
                   <source src="assets/video/peapod.mp4" type="video/mp4">
                 </video>
