Fix peapod video autoplay

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                 </video>
               </div> -->
               <div class="embedVideo rounded size-4x3 ae-1 margin-bottom-phone-4 margin-bottom-phablet-4 margin-bottom-tablet-4 middle">
-                <video poster="assets/img/peapod@2x.jpg" autoplay="" loop="" muted="" webkit-playsinline="">
+                <video poster="assets/img/peapod@2x.jpg" autoplay loop muted webkit-playsinline playsinline>
                   <source src="assets/video/peapod.mp4" type="video/mp4">
                 </video>
               </div>
@@ -563,7 +563,7 @@
 </section>
 
 <!-- Popup Video -->
-<div class="popup autoplay" data-popup-id="16">
+<!-- <div class="popup autoplay" data-popup-id="16">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
     <div class="container">
@@ -576,7 +576,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Motorola -->
 <section class="slide whiteSlide" data-name="motorola">
