--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <base href="./">
-    <title>Chris Allen · Portfolio</title>
+    <title>Chris Allen</title>
     <meta property="og:title" content="Portfolio of Chris Allen" />
     <meta name="twitter:title" content="Portfolio of Chris Allen" />
     <meta name="description" content="Personal website and portfolio for Chris Allen, the Head of Design for SAP New Ventures &amp; Technologies based in San Francisco." />
@@ -30,16 +30,32 @@
 <body class="slides stack smooth slow animated">
 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 
-  <symbol id="logo" viewBox="0 0 32 32"><title>Chris Allen</title><path d="M24.8173 29.1821C24.8173 29.1821 21.318 32 15.8849 32C6.90648 32 0 24.9791 0 16C0 7.06866 6.90648 0 15.8849 0C19.2577 0 22.3311 0.944884 24.8684 2.56545L22.4927 5.99718C20.6322 4.77452 18.3702 4.0597 15.8849 4.0597C9.39281 4.0597 4.3741 9.31343 4.3741 16C4.3741 22.7343 9.39281 27.9403 15.8849 27.9403C19.7986 27.9403 22.4691 25.7433 22.4691 25.7433C23.0216 26.4756 23.5332 27.2504 24.0448 28.0252C24.3006 28.4126 24.5564 28.8 24.8173 29.1821Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M25.4295 8.78253C26.8208 10.6774 27.6259 13.0088 27.6259 15.5224C27.6259 18.8657 26.4748 20.0597 25.0935 20.0597C23.9424 20.0597 23.0216 19.1045 23.0216 16.4776V8.1194H19.3381L18.6475 9.79104C18.6475 9.79104 17.036 7.64179 14.7338 7.64179C10.8201 7.64179 7.59712 10.9851 7.59712 16C7.59712 21.0149 10.8201 24.3582 14.7338 24.3582C18.141 24.3582 20.0288 21.4925 20.0288 21.4925C20.0288 21.4925 21.6403 24.3582 25.0935 24.3582C28.777 24.3582 32 21.0149 32 15.5224C32 11.5379 30.4898 7.89571 27.9495 5.14229L25.4295 8.78253ZM11.9712 16C11.9712 18.3881 13.5827 20.0597 15.4245 20.0597C17.2662 20.0597 18.8777 18.3881 18.8777 16C18.8777 13.6119 17.2662 11.9403 15.4245 11.9403C13.5827 11.9403 11.9712 13.6119 11.9712 16Z"></path></symbol>
+  <!-- <symbol id="logo" viewBox="0 0 32 32"><title>Chris Allen</title><path d="M24.8173 29.1821C24.8173 29.1821 21.318 32 15.8849 32C6.90648 32 0 24.9791 0 16C0 7.06866 6.90648 0 15.8849 0C19.2577 0 22.3311 0.944884 24.8684 2.56545L22.4927 5.99718C20.6322 4.77452 18.3702 4.0597 15.8849 4.0597C9.39281 4.0597 4.3741 9.31343 4.3741 16C4.3741 22.7343 9.39281 27.9403 15.8849 27.9403C19.7986 27.9403 22.4691 25.7433 22.4691 25.7433C23.0216 26.4756 23.5332 27.2504 24.0448 28.0252C24.3006 28.4126 24.5564 28.8 24.8173 29.1821Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M25.4295 8.78253C26.8208 10.6774 27.6259 13.0088 27.6259 15.5224C27.6259 18.8657 26.4748 20.0597 25.0935 20.0597C23.9424 20.0597 23.0216 19.1045 23.0216 16.4776V8.1194H19.3381L18.6475 9.79104C18.6475 9.79104 17.036 7.64179 14.7338 7.64179C10.8201 7.64179 7.59712 10.9851 7.59712 16C7.59712 21.0149 10.8201 24.3582 14.7338 24.3582C18.141 24.3582 20.0288 21.4925 20.0288 21.4925C20.0288 21.4925 21.6403 24.3582 25.0935 24.3582C28.777 24.3582 32 21.0149 32 15.5224C32 11.5379 30.4898 7.89571 27.9495 5.14229L25.4295 8.78253ZM11.9712 16C11.9712 18.3881 13.5827 20.0597 15.4245 20.0597C17.2662 20.0597 18.8777 18.3881 18.8777 16C18.8777 13.6119 17.2662 11.9403 15.4245 11.9403C13.5827 11.9403 11.9712 13.6119 11.9712 16Z"></path></symbol> -->
+
+
+  <symbol id="logo" viewBox="0 0 24 24"><title>Chris Allen</title><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C13.6511 2 15.2116 2.40095 16.5864 3.11168C17.077 3.36529 17.2691 3.96861 17.0155 4.45922C16.7619 4.94982 16.1586 5.14194 15.668 4.88832C14.5704 4.32091 13.3241 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C13.6467 20 15.1744 19.5036 16.4454 18.6524C16.9042 18.345 17.5254 18.4679 17.8327 18.9268C18.14 19.3856 18.0172 20.0068 17.5583 20.3141C15.9683 21.3789 14.0552 22 12 22C6.47715 22 2 17.5228 2 12ZM18.9282 6.16899C19.3871 5.86178 20.0082 5.98479 20.3155 6.44374C21.3795 8.0333 22 9.9457 22 12C22 13.5763 21.7434 14.8242 21.1309 15.6987C20.467 16.6466 19.5008 17 18.5 17C17.5002 17 16.5336 16.6482 15.8693 15.7002C15.8004 15.6019 15.736 15.4988 15.6759 15.3911C14.7619 16.3812 13.4527 17 12 17C9.24126 17 6.99945 14.7673 6.99945 12C6.99945 9.23394 9.2326 7 12 7C13.1272 7 14.1653 7.37161 15 7.99834C15.0009 7.44682 15.4483 7 16 7C16.5523 7 17 7.44772 17 8V12C17 13.4257 17.2444 14.1776 17.5071 14.5524C17.7182 14.8536 18.0016 15 18.5 15C18.9974 15 19.2812 14.8535 19.4927 14.5514C19.7557 14.1759 20 13.4238 20 12C20 10.354 19.504 8.8269 18.6534 7.55626C18.3462 7.09731 18.4692 6.4762 18.9282 6.16899ZM15 12C15 10.344 13.6615 9 12 9C10.3372 9 8.99945 10.3384 8.99945 12C8.99945 13.6603 10.3435 15 12 15C13.6566 15 15 13.6615 15 12Z"/></symbol>
+
+
   <symbol id="sap" viewBox="0 0 64 32"><path d="M21.403 18.623c.646.24 1.33.362 2.018.357.673 0 1.341-.114 1.977-.338l-1.963-6.386H23.4l-1.997 6.367zM36.963 15.32h1.387v-.007c1.852 0 3.328-.623 3.328-2.6 0-1.904-1.476-2.531-3.328-2.531h-1.387v5.139z" fill="#202020"/><path fill-rule="evenodd" clip-rule="evenodd" d="M32.344 32H0V0h64L32.344 32zM31.68 6.017h6.301c6.02 0 8.848 2.17 8.848 6.893 0 4.243-2.91 6.776-7.831 6.776h-2.035v6.118h-9.334l-.93-2.924a10.5 10.5 0 01-3.285.51 10.369 10.369 0 01-3.364-.538l-.961 2.952h-5.716l.64-1.702-.023.02c-.068.062-.134.123-.209.18-1.424 1.162-3.21 1.798-5.42 1.838h-.327a14.433 14.433 0 01-7.139-1.917l1.945-3.908c2.112 1.26 3.433 1.542 5.216 1.505.925-.016 1.596-.189 2.032-.643a1.51 1.51 0 00.414-1.001c.017-1.015-1.41-1.492-3.16-2.04-1.418-.443-3.026-1.047-4.283-1.98-1.49-1.097-2.2-2.485-2.164-4.438a5.4 5.4 0 011.507-3.715c1.385-1.448 3.62-2.326 6.301-2.326h.014c2.302.003 5.105.663 7.142 1.707l-2.188 3.85c-2.225-1.083-3.343-1.187-4.61-1.254-1.886-.098-2.84.58-2.853 1.314-.024.897 1.778 1.708 3.476 2.259 2.576.827 5.836 1.93 6.338 5.121L20.72 6.013h5.457l5.503 15.145V6.018z"/></symbol>
   <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
   <symbol id="arrow-left" viewBox="0 0 29 56"><path d="M28.7.3c.4.4.4 1 0 1.4l-26.3 26.3 26.3 26.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-27-27c-.4-.4-.4-1 0-1.4l27-27c.3-.3 1-.4 1.4 0z"/></symbol>
   <symbol id="arrow-right" viewBox="0 0 29 56"><path d="M.3 55.7c-.4-.4-.4-1 0-1.4l26.3-26.3-26.3-26.3c-.4-.4-.4-1 0-1.4.4-.4 1-.4 1.4 0l27 27c.4.4.4 1 0 1.4l-27 27c-.3.3-1 .4-1.4 0z"/></symbol>
   <symbol id="back" viewBox="0 0 20 20"><path d="M2.3 10.7l5 5c.4.4 1 .4 1.4 0s.4-1 0-1.4l-3.3-3.3h11.6c.6 0 1-.4 1-1s-.4-1-1-1h-11.6l3.3-3.3c.4-.4.4-1 0-1.4-.2-.2-.4-.3-.7-.3s-.5.1-.7.3l-5 5c-.2.2-.3.5-.3.7 0 .2.1.5.3.7z"/></symbol>
-  <symbol id="menu" viewBox="0 0 18 18"><path d="M16 5h-14c-.6 0-1-.4-1-1 0-.5.4-1 1-1h14c.5 0 1 .4 1 1s-.4 1-1 1zm-14 5h14c.5 0 1-.4 1-1 0-.5-.4-1-1-1h-14c-.6 0-1 .4-1 1s.4 1 1 1zm14 3h-14c-.5 0-1 .4-1 1 0 .5.4 1 1 1h14c.5 0 1-.4 1-1s-.4-1-1-1z"/></symbol>
+
+  <!-- <symbol id="menu" viewBox="0 0 18 18"><path d="M16 5h-14c-.6 0-1-.4-1-1 0-.5.4-1 1-1h14c.5 0 1 .4 1 1s-.4 1-1 1zm-14 5h14c.5 0 1-.4 1-1 0-.5-.4-1-1-1h-14c-.6 0-1 .4-1 1s.4 1 1 1zm14 3h-14c-.5 0-1 .4-1 1 0 .5.4 1 1 1h14c.5 0 1-.4 1-1s-.4-1-1-1z"/></symbol> -->
+
+  <symbol id="menu" viewBox="0 0 24 24"><path fill-rule="evenodd" clip-rule="evenodd" d="M4 7C4 6.44772 4.44772 6 5 6H19C19.5523 6 20 6.44772 20 7C20 7.55228 19.5523 8 19 8H5C4.44772 8 4 7.55228 4 7Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M4 12C4 11.4477 4.44772 11 5 11H19C19.5523 11 20 11.4477 20 12C20 12.5523 19.5523 13 19 13H5C4.44772 13 4 12.5523 4 12Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M4 17C4 16.4477 4.44772 16 5 16H19C19.5523 16 20 16.4477 20 17C20 17.5523 19.5523 18 19 18H5C4.44772 18 4 17.5523 4 17Z"/></symbol>
+
   <symbol id="share" viewBox="0 0 18 18"><path d="M16 8c-.6 0-1 .4-1 1v6h-12v-6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-6c0-.6-.4-1-1-1zm-2.3-2.3c.4-.4.4-1 0-1.4l-4-4c-.4-.4-1-.4-1.4 0l-4 4c-.4.4-.4 1 0 1.4s1 .4 1.4 0l2.3-2.3v7.6c0 .6.4 1 1 1s1-.4 1-1v-7.6l2.3 2.3c.4.4 1 .4 1.4 0z"/></symbol>
-  <symbol id="arrow-down" viewBox="0 0 24 24"><path d="M12 18c-.2 0-.5-.1-.7-.3l-11-10c-.4-.4-.4-1-.1-1.4.4-.4 1-.4 1.4-.1l10.4 9.4 10.3-9.4c.4-.4 1-.3 1.4.1.4.4.3 1-.1 1.4l-11 10c-.1.2-.4.3-.6.3z"/></symbol>
-  <symbol id="arrow-up" viewBox="0 0 24 24"><path d="M11.9 5.9c.2 0 .5.1.7.3l11 10c.4.4.4 1 .1 1.4-.4.4-1 .4-1.4.1l-10.4-9.4-10.3 9.4c-.4.4-1 .3-1.4-.1-.4-.4-.3-1 .1-1.4l11-10c.1-.2.4-.3.6-.3z"/></symbol>
+
+  <!-- <symbol id="arrow-down" viewBox="0 0 24 24"><path d="M12 18c-.2 0-.5-.1-.7-.3l-11-10c-.4-.4-.4-1-.1-1.4.4-.4 1-.4 1.4-.1l10.4 9.4 10.3-9.4c.4-.4 1-.3 1.4.1.4.4.3 1-.1 1.4l-11 10c-.1.2-.4.3-.6.3z"/></symbol> -->
+
+  <symbol id="arrow-down" viewBox="0 0 24 24"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 4C12.5523 4 13 4.44772 13 5V16.5858L16.2929 13.2929C16.6834 12.9024 17.3166 12.9024 17.7071 13.2929C18.0976 13.6834 18.0976 14.3166 17.7071 14.7071L12.7071 19.7071C12.3166 20.0976 11.6834 20.0976 11.2929 19.7071L6.29289 14.7071C5.90237 14.3166 5.90237 13.6834 6.29289 13.2929C6.68342 12.9024 7.31658 12.9024 7.70711 13.2929L11 16.5858V5C11 4.44772 11.4477 4 12 4Z"/></symbol>
+
+  <!-- <symbol id="arrow-up" viewBox="0 0 24 24"><path d="M11.9 5.9c.2 0 .5.1.7.3l11 10c.4.4.4 1 .1 1.4-.4.4-1 .4-1.4.1l-10.4-9.4-10.3 9.4c-.4.4-1 .3-1.4-.1-.4-.4-.3-1 .1-1.4l11-10c.1-.2.4-.3.6-.3z"/></symbol> -->
+
+  <symbol id="arrow-up" viewBox="0 0 24 24"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.2929 4.29289C11.6834 3.90237 12.3166 3.90237 12.7071 4.29289L17.7071 9.29289C18.0976 9.68342 18.0976 10.3166 17.7071 10.7071C17.3166 11.0976 16.6834 11.0976 16.2929 10.7071L13 7.41421V19C13 19.5523 12.5523 20 12 20C11.4477 20 11 19.5523 11 19V7.41421L7.70711 10.7071C7.31658 11.0976 6.68342 11.0976 6.29289 10.7071C5.90237 10.3166 5.90237 9.68342 6.29289 9.29289L11.2929 4.29289Z"/></symbol>
+
   <symbol id="arrow-top" viewBox="0 0 18 18"><path d="M15.7 7.3l-6-6c-.4-.4-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4.4.4 1 .4 1.4 0l4.3-4.3v11.6c0 .6.4 1 1 1s1-.4 1-1v-11.6l4.3 4.3c.2.2.4.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4z"/></symbol>
   <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
   <symbol id="chat" viewBox="0 0 18 18"><path d="M5,17c-0.2,0-0.3,0-0.4-0.1C4.2,16.7,4,16.4,4,16v-2H2c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h14c1.1,0,2,0.9,2,2v9 c0,1.1-0.9,2-2,2H9.3l-3.7,2.8C5.4,16.9,5.2,17,5,17z M2,12h3.5C5.8,12,6,12.2,6,12.5V14l2.4-1.8C8.6,12.1,8.8,12,9,12h7V3H2V12z M13,7H5C4.4,7,4,6.6,4,6s0.4-1,1-1h8c0.6,0,1,0.4,1,1S13.6,7,13,7z M13,10H5c-0.6,0-1-0.4-1-1s0.4-1,1-1h8c0.6,0,1,0.4,1,1 S13.6,10,13,10z"/></symbol>
@@ -91,14 +107,16 @@
         <li><a href="#"><h5 class="weight-5 opacity-3">Motorola</h5></a></li>
       </ul>
     </div> -->
+    <div class="center"><span class="prevSlide"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-up"></use></svg></span></div>
     <div class="right">
       <!-- <span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span> -->
-      <a title="Menu" class="sidebarTrigger" data-sidebar-id="1"><svg style="width:24px;height:24px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></a>
+      <a title="Menu" class="sidebarTrigger" data-sidebar-id="1"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></a>
     </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="#" title="Slides Framework"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
-    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+    <div class="left"><a href="#" title="Chris Allen"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
+    <div class="center"><span class="prevSlide"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-up"></use></svg></span></div>
+    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
 
@@ -437,6 +455,45 @@
 
 </section> -->
 
+<!-- components slide -->
+<section class="slide components whiteSlide" data-name="icons">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+        <div class="fix-12-12">
+          <ul class="flex verticalCenter reverse">
+            <li class="col-5-12 left">
+              <h1 class="xl margin-bottom-2  ae-2 fromBottom newMangoText">iO Icons</h1>
+              <!-- <p class="ae-3 fromBottom largest newTealText"><span class="bold">Have focused &amp; productive 1:1 meetings while building trust with the people you work with.</span></p> -->
+              <p class="ae-4 fromBottom large">This project started out as a creative outlet on my commute to and from San Francisco - a simple redesign of Google's <a href="https://material.io/resources/icons/?style=baseline" class="bold">Material Design Icons</a> using the style of <a href="https://feathericons.com/" class="bold">Feather Icons</a>.</p>
+              <p class="ae-5 fromBottom large margin-bottom-4">After many trips on the train, the icon set has grown to more than 1,500 icons covering all of SAP's <a href="https://sapui5.hana.ondemand.com/sdk/test-resources/sap/m/demokit/iconExplorer/webapp/index.html#/overview/SAP-icons" class="bold">Fiori Icons</a> in addition to the Material Design icon set.  The main challenge was creating a set of ingredients (2px stroke, minimal fill shapes, etc) in order to scale the set across all of SAP for easy collaboration.</p>
+              <a class="button newMango rounded ae-6 fromBottom cropLeft wideForPhone">View the Full Set</a>
+              <a class="button white newMangoText rounded ae-7 fromBottom wideForPhone">Learn More</a>
+            </li>
+            <li class="col-1-12"></li>
+            <li class="col-6-12 left relative ae-1 fade-6In">
+
+              <img class="components-pics layer-1 switchLight showForDesktop hideForTablet" src="assets/img/icons-bottom@2x.png" width="772" alt="Components"/>
+              <img class="components-pics layer-1 switchDark showForDesktop hideForTablet" src="assets/img/icons-bottom-dark@2x.png" width="772" alt="Components"/>
+
+              <img class="components-pics layer-2 switchLight showForDesktop hideForTablet" src="assets/img/icons-middle@2x.png" width="1002" alt="Components"/>
+              <img class="components-pics layer-2 switchDark showForDesktop hideForTablet" src="assets/img/icons-middle-dark@2x.png" width="1002" alt="Components"/>
+
+              <img class="components-pics layer-3 switchLight showForDesktop hideForTablet" src="assets/img/icons-top@2x.png" width="366" alt="Components"/>
+              <img class="components-pics layer-3 switchDark showForDesktop hideForTablet" src="assets/img/icons-top-dark@2x.png" width="366" alt="Components"/>
+
+              <img class="components-mobile switchLight hideForDesktop showForTablet margin-bottom-4" src="assets/img/icons-mobile@2x.png" alt="Components"/>
+              <img class="components-mobile switchDark hideForDesktop showForTablet margin-bottom-4" src="assets/img/icons-mobile-dark@2x.png" alt="Components"/>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Atlas -->
 <section class="slide whiteSlide" data-name="atlas">
   <div class="content">
@@ -608,7 +665,7 @@
 <!-- Panel Bottom #09 -->
 <nav class="panel bottom">
   <div class="sections">
-    <div class="center"><span class="nextSlide"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-down"></use></svg></span></div>
+    <div class="center"><span class="nextSlide"><svg style="width:32px;height:32px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-down"></use></svg></span></div>
   </div>
 </nav>
 
